--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             height: 550px;
 		}
 		#carousel>ul>.first{
-			background-image: url('images/hy0.jpg');
+			background-image: url('http://d.5857.com/hyrz_161008/003.jpg');
 		}
 		#carousel>ul>.second{
-			background-image: url('images/yh0.jpg');
+			background-image: url('http://pic1.win4000.com/wallpaper/8/5302c79c3178b.jpg');
 		}
 		#carousel>ul>.third{
-			background-image: url('images/jr0.jpg');
+			background-image: url('http://pic1.win4000.com/wallpaper/1/51db7cc52897a.jpg');
 		}
 		#carousel>ul>.fourth{
-			background-image: url('images/qm0.jpg');
+			background-image: url('http://tupian.enterdesk.com/2012/0720/cyf/2/6.jpg');
 		}
 		.pre{
 			line-height: 40px;
@@ -140,42 +140,42 @@
 	<h1 class="title">人在保护自己最重要的人时就会变得很强</h1>
 	<div id="lazyload">
 		<ul class="clearfix">
-			<li><img src="" data-src="images/hy1.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh1.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr1.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm1.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy2.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh2.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr2.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm2.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy3.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh3.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr3.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm3.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy4.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh4.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr4.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm4.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy5.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh5.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr5.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm5.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy6.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh6.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr6.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm6.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy7.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh7.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr7.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm7.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy8.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh8.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr8.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm8.jpg" alt=""></li>
-			<li><img src="" data-src="images/hy9.jpg" alt=""></li>
-			<li><img src="" data-src="images/yh9.jpg" alt=""></li>
-			<li><img src="" data-src="images/jr9.jpg" alt=""></li>
-			<li><img src="" data-src="images/qm9.jpg" alt=""></li>
+			<li><img src="" data-src="http://img4.imgtn.bdimg.com/it/u=1929877129,3041196175&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=791471006,108976347&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2876645532,1093138933&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=2506403594,3771820463&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=1581959929,420901252&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3149874556,2359193169&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=1645979588,3350603109&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=1734866761,3738918754&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=1132734911,2879143104&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://d.5857.com/hyrz_161008/006.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=3369172871,3903083038&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=2548974703,1066275044&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=2092043829,2990059322&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=2316622832,1202188133&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img2.imgtn.bdimg.com/it/u=4193397625,863717459&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=1051188427,274085660&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2723189136,930828802&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2860843389,1238714854&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3221532984,115946875&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=1791853422,3531992639&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img4.imgtn.bdimg.com/it/u=1929877129,3041196175&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=791471006,108976347&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=2876645532,1093138933&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=2506403594,3771820463&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=1581959929,420901252&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3149874556,2359193169&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=1645979588,3350603109&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=1734866761,3738918754&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=1132734911,2879143104&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://d.5857.com/hyrz_161008/006.jpg" alt=""></li>
+			<li><img src="" data-src="http://img5.imgtn.bdimg.com/it/u=3369172871,3903083038&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=2548974703,1066275044&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=2092043829,2990059322&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img1.imgtn.bdimg.com/it/u=2316622832,1202188133&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img2.imgtn.bdimg.com/it/u=4193397625,863717459&fm=23&gp=0.jpg" alt=""></li>
+			<li><img src="" data-src="http://img3.imgtn.bdimg.com/it/u=1051188427,274085660&fm=23&gp=0.jpg" alt=""></li>
 		</ul>
 	</div>
 	<div class="gotop hide">回到顶部</div>
